AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libopencalgl.la

libopencalgl_la_SOURCES = calgl2D.c calgl2DNodeData.c calgl2DUpdater.c calgl2DWindow.c calgl3D.c calgl3DNodeData.c calgl3DUpdater.c calgl3DWindow.c calglGlobalSettings.c calglInfoBar.c calglLightParameter.c calglModelViewParameter.c calglUtils.c 

include_HEADERS = ../include/calgl2D.h ../include/calgl2DNodeData.h ../include/calgl2DUpdater.h ../include/calgl2DWindow.h ../include/calgl3D.h ../include/calgl3DNodeData.h ../include/calgl3DUpdater.h ../include/calgl3DWindow.h ../include/calglCommon.h ../include/calglGlobalSettings.h ../include/calglInfoBar.h ../include/calglLightParameter.h ../include/calglModelViewParameter.h ../include/calglUtils.h 

