AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libopencal.la

libopencal_la_SOURCES = cal2DBuffer.c cal2DBufferIO.c cal2D.c cal2DIO.c cal2DRun.c cal2DUnsafe.c cal3DBuffer.c cal3DBufferIO.c cal3D.c cal3DIO.c cal3DRun.c
include_HEADERS = ../include/cal2DBuffer.h ../include/cal2DBufferIO.h ../include/cal2D.h ../include/cal2DIO.h ../include/cal2DRun.h ../include/cal2DUnsafe.h ../include/cal3DBuffer.h ../include/cal3DBufferIO.h ../include/cal3D.h ../include/cal3DIO.h ../include/cal3DRun.h ../include/calCommon.h ../include/calOmpDef.h
