cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

ADD_SUBDIRECTORY(cal-sciddicaS3hex)
ADD_SUBDIRECTORY(cal-sciddicaS3hex-activecells)
ADD_SUBDIRECTORY(calomp-sciddicaS3hex)
ADD_SUBDIRECTORY(calomp-sciddicaS3hex-activecells)
ADD_SUBDIRECTORY(calcl-sciddicaS3hex)
ADD_SUBDIRECTORY(calcl-sciddicaS3hex-activecells)
